# AndroidObfuscationTest

./: README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/obfuscationtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  base64.cpp  base64.h  kafka.cpp  obfuscate.h  obfuscate_crypt.h  utilities.cpp  utilities.h
app/src/main/java/com/example/obfuscationtest/: KafkaLoader.kt  MainActivity.kt
app/src/main/java/com/example/obfuscationtest/kafka/: KafKey.kt  KafKeys.kt  KafLoader.kt
app/src/main/java/com/example/obfuscationtest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/obfuscationtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
